# Housepage

./: .gitignore  Makefile  README.md  flake.nix  justfile
.github/workflows/: housepage-ci.yml
backend-rs/: Cargo.toml  settings_resp.json  tasks_resp.json
backend-rs/src/: main.rs  models.rs  storage.rs
backend-rs/src/logic/: deal.rs  derive.rs  metrics.rs  mod.rs
backend/app/: config.py  deal.py  derive.py  editing.py  events.py  main.py  metrics.py  models.py  state.py  storage.py  writeback.py
data/: checks.json.md  events.ndjson.md  settings.json.md  tasks.json.md
docs/architecture/: housepage-editions.md
docs/deployment/: webapp.md
docs/historical/: IMPLEMENTATION_PLAN.md  tasks_and_checks.md
docs/runbooks/: local-development.md
docs/technical/: TODO.md  interface_backend_overview.md  process_overview.md  storage_behavior.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
scripts/: dev.sh
vault_sample/chore_system/: checks.json  events.ndjson  settings.json  tasks.json
vault_sample/chore_system/backups/: checks_backup_20251216_132651.json
webapp/: .env.example  .gitignore  README.md  package-lock.json  package.json  prisma.config.ts  vitest.config.ts
webapp/prisma/: schema.prisma  seed.js  seed.ts
webapp/public/: manifest.json
webapp/scripts/: seed-scan-sample.ts  smoke-access.ts  smoke-http.ts  smoke-webapp.ts  smoke.ts  validate-scan-data.ts
webapp/src/: auth.config.ts  auth.ts  middleware.ts  next-globals.d.ts  next-types.d.ts  proxy.ts
webapp/tests/: deal-scoring.test.ts
(+49 files in other folders)
